--- a/practica2_sis_recomendacion1.ipynb
+++ b/practica2_sis_recomendacion1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNtRut0954QuOFbMgwqLOgB",
+      "authorship_tag": "ABX9TyOoDRDWrHQja39tD7vnp9kC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,9 +49,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WDb_EZXED7Rg",
-        "outputId": "bbbac87d-736b-4dae-e842-ce1abfc984fb"
+        "outputId": "d43b0ddb-87f9-4d36-cc2a-1e267cde5b7b"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -59,13 +59,25 @@
           "text": [
             "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (2.2.2)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (1.26.4)\n",
-            "Requirement already satisfied: scikit-surprise in /usr/local/lib/python3.10/dist-packages (1.1.4)\n",
+            "Collecting scikit-surprise\n",
+            "  Downloading scikit_surprise-1.1.4.tar.gz (154 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m154.4/154.4 kB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
+            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.10/dist-packages (from pandas) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2024.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.10/dist-packages (from pandas) (2024.2)\n",
             "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.10/dist-packages (from scikit-surprise) (1.4.2)\n",
             "Requirement already satisfied: scipy>=1.6.0 in /usr/local/lib/python3.10/dist-packages (from scikit-surprise) (1.13.1)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+            "Building wheels for collected packages: scikit-surprise\n",
+            "  Building wheel for scikit-surprise (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for scikit-surprise: filename=scikit_surprise-1.1.4-cp310-cp310-linux_x86_64.whl size=2357292 sha256=c76f305d5bd3248a9ec8f66d42609d58c1af250bce4b4559e90c8f664dd0e4c1\n",
+            "  Stored in directory: /root/.cache/pip/wheels/4b/3f/df/6acbf0a40397d9bf3ff97f582cc22fb9ce66adde75bc71fd54\n",
+            "Successfully built scikit-surprise\n",
+            "Installing collected packages: scikit-surprise\n",
+            "Successfully installed scikit-surprise-1.1.4\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (1.13.1)\n",
             "Requirement already satisfied: numpy<2.3,>=1.22.4 in /usr/local/lib/python3.10/dist-packages (from scipy) (1.26.4)\n"
           ]
@@ -101,7 +113,7 @@
       "metadata": {
         "id": "HD9-_IJbD3Wz"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -134,21 +146,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zUREQ-xfE5zB",
-        "outputId": "55123af9-0eb8-4e32-82d5-5aff18c90f80"
+        "outputId": "798bc4af-da5e-43aa-9828-b3cd0ea98804"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'practica1_SRC'...\n",
-            "remote: Enumerating objects: 17, done.\u001b[K\n",
-            "remote: Counting objects:   5% (1/17)\u001b[K\rremote: Counting objects:  11% (2/17)\u001b[K\rremote: Counting objects:  17% (3/17)\u001b[K\rremote: Counting objects:  23% (4/17)\u001b[K\rremote: Counting objects:  29% (5/17)\u001b[K\rremote: Counting objects:  35% (6/17)\u001b[K\rremote: Counting objects:  41% (7/17)\u001b[K\rremote: Counting objects:  47% (8/17)\u001b[K\rremote: Counting objects:  52% (9/17)\u001b[K\rremote: Counting objects:  58% (10/17)\u001b[K\rremote: Counting objects:  64% (11/17)\u001b[K\rremote: Counting objects:  70% (12/17)\u001b[K\rremote: Counting objects:  76% (13/17)\u001b[K\rremote: Counting objects:  82% (14/17)\u001b[K\rremote: Counting objects:  88% (15/17)\u001b[K\rremote: Counting objects:  94% (16/17)\u001b[K\rremote: Counting objects: 100% (17/17)\u001b[K\rremote: Counting objects: 100% (17/17), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (16/16), done.\u001b[K\n",
-            "remote: Total 17 (delta 2), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (17/17), 973.33 KiB | 3.73 MiB/s, done.\n",
-            "Resolving deltas: 100% (2/2), done.\n"
+            "remote: Enumerating objects: 33, done.\u001b[K\n",
+            "remote: Counting objects: 100% (33/33), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (32/32), done.\u001b[K\n",
+            "remote: Total 33 (delta 8), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (33/33), 1.08 MiB | 4.73 MiB/s, done.\n",
+            "Resolving deltas: 100% (8/8), done.\n"
           ]
         }
       ]
@@ -166,9 +178,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d2352f37-236a-4a1d-f4e1-34dc158883ab"
+        "outputId": "b26fba0f-b6d3-4db4-9af3-f1335b6e4ade"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,9 +211,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "27a6f868-998c-4198-f8e6-3ee03646c8f8"
+        "outputId": "adc41ed1-c4ad-4f2b-93b5-d03994b0ca0f"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,9 +252,9 @@
           "height": 762
         },
         "id": "SOxAp9UAUPxL",
-        "outputId": "c3431619-8535-4651-baa0-3c35876e0e72"
+        "outputId": "6c837a00-3420-425d-bea0-7770f42a6c5b"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,7 +281,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e333a97d-6612-4394-b45f-4734a5d82a8b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-35553583-fba5-42be-9d03-a1d0d6617449\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -371,7 +383,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e333a97d-6612-4394-b45f-4734a5d82a8b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-35553583-fba5-42be-9d03-a1d0d6617449')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -423,12 +435,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e333a97d-6612-4394-b45f-4734a5d82a8b button.colab-df-convert');\n",
+              "        document.querySelector('#df-35553583-fba5-42be-9d03-a1d0d6617449 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e333a97d-6612-4394-b45f-4734a5d82a8b');\n",
+              "        const element = document.querySelector('#df-35553583-fba5-42be-9d03-a1d0d6617449');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -448,8 +460,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-05438285-c599-4684-95ce-cdb85192a51d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-05438285-c599-4684-95ce-cdb85192a51d')\"\n",
+              "<div id=\"df-c069f1a1-5f2d-4c56-b79d-e268c72069ee\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c069f1a1-5f2d-4c56-b79d-e268c72069ee')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -568,7 +580,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-05438285-c599-4684-95ce-cdb85192a51d button');\n",
+              "        document.querySelector('#df-c069f1a1-5f2d-4c56-b79d-e268c72069ee button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -623,7 +635,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c3d42357-d0f1-47dc-96c7-395b9364d0fc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-40b6a12f-f653-4734-983a-f03870fc737e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -714,7 +726,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c3d42357-d0f1-47dc-96c7-395b9364d0fc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-40b6a12f-f653-4734-983a-f03870fc737e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -766,12 +778,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c3d42357-d0f1-47dc-96c7-395b9364d0fc button.colab-df-convert');\n",
+              "        document.querySelector('#df-40b6a12f-f653-4734-983a-f03870fc737e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c3d42357-d0f1-47dc-96c7-395b9364d0fc');\n",
+              "        const element = document.querySelector('#df-40b6a12f-f653-4734-983a-f03870fc737e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -791,8 +803,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-0a51368e-e364-4845-8a73-4709fc7704e1\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0a51368e-e364-4845-8a73-4709fc7704e1')\"\n",
+              "<div id=\"df-aa56ce99-aaf3-493b-9b2d-bee752c6b256\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-aa56ce99-aaf3-493b-9b2d-bee752c6b256')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -911,7 +923,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-0a51368e-e364-4845-8a73-4709fc7704e1 button');\n",
+              "        document.querySelector('#df-aa56ce99-aaf3-493b-9b2d-bee752c6b256 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -961,9 +973,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cdc7555a-ff74-4628-e2f0-ae2b0f76ebe2"
+        "outputId": "6d060766-7cc9-41b2-a822-0d237bf2cb36"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1062,7 +1074,7 @@
       "metadata": {
         "id": "93ErLMPdLXKh"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1123,7 +1135,7 @@
       "metadata": {
         "id": "PfViz6VJWbtK"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1151,22 +1163,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CzM-3RXVrGf3",
-        "outputId": "5925234a-efe5-482e-89b2-93f8b7e6cdf1"
+        "outputId": "09eb1e65-6f39-47b6-c556-0bb51d49c0fc"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Recomendaciones para el usuario 1:\n",
-            "                                      title\n",
-            "movieId                                    \n",
-            "12       Dracula: Dead and Loving It (1995)\n",
-            "18                        Four Rooms (1995)\n",
-            "4                  Waiting to Exhale (1995)\n",
-            "7                            Sabrina (1995)\n",
-            "15                  Cutthroat Island (1995)\n"
+            "                            title\n",
+            "movieId                          \n",
+            "3         Grumpier Old Men (1995)\n",
+            "4        Waiting to Exhale (1995)\n",
+            "9             Sudden Death (1995)\n"
           ]
         }
       ]
@@ -1252,7 +1262,39 @@
         "print(f\"Recall: {recall:.2f}\")"
       ],
       "metadata": {
-        "id": "g2G6j-xMQLL7"
+        "id": "g2G6j-xMQLL7",
+        "outputId": "dce31587-1b60-4934-95c4-322096d9a283",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Películas relevantes: {1024, 1, 1025, 3, 2048, 1029, 6, 1031, 1032, 2054, 2058, 2571, 527, 1552, 1042, 2580, 1049, 2078, 543, 3617, 1060, 1573, 2596, 552, 553, 2090, 2094, 47, 2096, 1073, 50, 1587, 2099, 3639, 1080, 2105, 2616, 1089, 1090, 2115, 1092, 2116, 2628, 1097, 3147, 590, 592, 593, 1617, 2640, 596, 1620, 2641, 2644, 2648, 1625, 2137, 2139, 3671, 2141, 2654, 2143, 608, 3168, 101, 1127, 110, 1136, 2161, 3702, 3703, 2174, 2692, 2700, 2193, 3729, 661, 151, 2716, 157, 3740, 3744, 163, 1196, 1197, 1198, 3253, 1206, 1208, 1210, 1213, 1214, 1220, 1732, 1222, 1224, 2761, 1226, 3273, 3793, 216, 1240, 2268, 733, 2273, 3809, 231, 1256, 235, 2797, 1265, 1777, 2291, 1270, 1275, 1278, 1793, 1282, 260, 2826, 1291, 1804, 1805, 1298, 2329, 804, 2858, 2353, 2872, 3386, 2366, 1348, 333, 2387, 2899, 2395, 349, 356, 2916, 2406, 362, 367, 3439, 3440, 3441, 3448, 3450, 2427, 1920, 2944, 2947, 2948, 2949, 1927, 2959, 2450, 919, 3479, 923, 2459, 3489, 1954, 2470, 4006, 2985, 2987, 940, 2478, 943, 1967, 2991, 2993, 2997, 441, 954, 2492, 1473, 5060, 2502, 3527, 457, 2000, 2005, 3033, 3034, 1500, 2012, 480, 2529, 2018, 2028, 1517, 2542, 3052, 3053, 2033, 3062, 3578, 2046, 1023}\n",
+            "Recomendaciones: {9, 3, 4}\n",
+            "Películas relevantes recomendadas: {3}\n",
+            "Precisión: 0.33\n",
+            "Recall: 0.01\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "k_CVO12xn3Zg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "aGTDVMINn4xP"
       },
       "execution_count": null,
       "outputs": []
