--- a/practica2_sis_recomendacion1.ipynb
+++ b/practica2_sis_recomendacion1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOoDRDWrHQja39tD7vnp9kC",
+      "authorship_tag": "ABX9TyNxqK8fkCO+Sv1kJ0NdNXBD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1100,7 +1100,7 @@
         "    # Identificar los vecinos más cercanos\n",
         "    user_index = user_id - 1  # Ajustar índice (IDs comienzan desde 1)\n",
         "    user_similarities = similarity_matrix[user_index]\n",
-        "    neighbors = np.argsort(-user_similarities)[1:21]  # Ignorar el propio usuario, es decir el número de vecinos es e 10, se puede cambiar\n",
+        "    neighbors = np.argsort(-user_similarities)[1:10]  # Ignorar el propio usuario, es decir el número de vecinos es e 10, se puede cambiar\n",
         "\n",
         "    # Calcular puntajes ponderados para películas no vistas\n",
         "    user_ratings = matrix[user_index].toarray().flatten()\n",
@@ -1135,7 +1135,7 @@
       "metadata": {
         "id": "PfViz6VJWbtK"
       },
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1163,20 +1163,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CzM-3RXVrGf3",
-        "outputId": "09eb1e65-6f39-47b6-c556-0bb51d49c0fc"
+        "outputId": "87353a5a-b834-434f-d2ae-92b2cbc28f4f"
       },
-      "execution_count": 11,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Recomendaciones para el usuario 1:\n",
-            "                            title\n",
-            "movieId                          \n",
-            "3         Grumpier Old Men (1995)\n",
-            "4        Waiting to Exhale (1995)\n",
-            "9             Sudden Death (1995)\n"
+            "                                         title\n",
+            "movieId                                       \n",
+            "7                               Sabrina (1995)\n",
+            "2                               Jumanji (1995)\n",
+            "11              American President, The (1995)\n",
+            "19       Ace Ventura: When Nature Calls (1995)\n",
+            "9                          Sudden Death (1995)\n"
           ]
         }
       ]
@@ -1263,22 +1265,22 @@
       ],
       "metadata": {
         "id": "g2G6j-xMQLL7",
-        "outputId": "dce31587-1b60-4934-95c4-322096d9a283",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7d9453c7-fbc6-43bc-851c-0005f95845b5"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Películas relevantes: {1024, 1, 1025, 3, 2048, 1029, 6, 1031, 1032, 2054, 2058, 2571, 527, 1552, 1042, 2580, 1049, 2078, 543, 3617, 1060, 1573, 2596, 552, 553, 2090, 2094, 47, 2096, 1073, 50, 1587, 2099, 3639, 1080, 2105, 2616, 1089, 1090, 2115, 1092, 2116, 2628, 1097, 3147, 590, 592, 593, 1617, 2640, 596, 1620, 2641, 2644, 2648, 1625, 2137, 2139, 3671, 2141, 2654, 2143, 608, 3168, 101, 1127, 110, 1136, 2161, 3702, 3703, 2174, 2692, 2700, 2193, 3729, 661, 151, 2716, 157, 3740, 3744, 163, 1196, 1197, 1198, 3253, 1206, 1208, 1210, 1213, 1214, 1220, 1732, 1222, 1224, 2761, 1226, 3273, 3793, 216, 1240, 2268, 733, 2273, 3809, 231, 1256, 235, 2797, 1265, 1777, 2291, 1270, 1275, 1278, 1793, 1282, 260, 2826, 1291, 1804, 1805, 1298, 2329, 804, 2858, 2353, 2872, 3386, 2366, 1348, 333, 2387, 2899, 2395, 349, 356, 2916, 2406, 362, 367, 3439, 3440, 3441, 3448, 3450, 2427, 1920, 2944, 2947, 2948, 2949, 1927, 2959, 2450, 919, 3479, 923, 2459, 3489, 1954, 2470, 4006, 2985, 2987, 940, 2478, 943, 1967, 2991, 2993, 2997, 441, 954, 2492, 1473, 5060, 2502, 3527, 457, 2000, 2005, 3033, 3034, 1500, 2012, 480, 2529, 2018, 2028, 1517, 2542, 3052, 3053, 2033, 3062, 3578, 2046, 1023}\n",
-            "Recomendaciones: {9, 3, 4}\n",
-            "Películas relevantes recomendadas: {3}\n",
-            "Precisión: 0.33\n",
-            "Recall: 0.01\n"
+            "Recomendaciones: {2, 7, 9, 11, 19}\n",
+            "Películas relevantes recomendadas: set()\n",
+            "Precisión: 0.00\n",
+            "Recall: 0.00\n"
           ]
         }
       ]
