Se creó con Colab

--- a/practica2_sis_recomendacion2.ipynb
+++ b/practica2_sis_recomendacion2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOoDRDWrHQja39tD7vnp9kC",
+      "authorship_tag": "ABX9TyOCr4Hb6ovShAYbKv54Ug3l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/gith/blob/main/practica2_sis_recomendacion1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mpjuarez/practica1_SRC/blob/main/practica2_sis_recomendacion2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -49,19 +49,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WDb_EZXED7Rg",
-        "outputId": "d43b0ddb-87f9-4d36-cc2a-1e267cde5b7b"
+        "outputId": "b73a2f9a-f4b3-4c72-8ff4-b252d8dec8e2"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (2.2.2)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (1.26.4)\n",
             "Collecting scikit-surprise\n",
             "  Downloading scikit_surprise-1.1.4.tar.gz (154 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m154.4/154.4 kB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m154.4/154.4 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
@@ -73,7 +76,7 @@
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
             "Building wheels for collected packages: scikit-surprise\n",
             "  Building wheel for scikit-surprise (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for scikit-surprise: filename=scikit_surprise-1.1.4-cp310-cp310-linux_x86_64.whl size=2357292 sha256=c76f305d5bd3248a9ec8f66d42609d58c1af250bce4b4559e90c8f664dd0e4c1\n",
+            "  Created wheel for scikit-surprise: filename=scikit_surprise-1.1.4-cp310-cp310-linux_x86_64.whl size=2357275 sha256=059cadaa206bb8183d91a5dd214f193c667bc44eca61ca436ae50bedcccf3e65\n",
             "  Stored in directory: /root/.cache/pip/wheels/4b/3f/df/6acbf0a40397d9bf3ff97f582cc22fb9ce66adde75bc71fd54\n",
             "Successfully built scikit-surprise\n",
             "Installing collected packages: scikit-surprise\n",
@@ -108,12 +111,14 @@
         "from surprise import Dataset, Reader\n",
         "from surprise import KNNBasic\n",
         "from surprise.model_selection import train_test_split\n",
-        "from scipy.sparse import csr_matrix #Para crear la matriz usuario-pelicula"
+        "from scipy.sparse import csr_matrix #Para crear la matriz usuario-pelicula\n",
+        "from sklearn.metrics import mean_squared_error\n",
+        "from math import sqrt"
       ],
       "metadata": {
         "id": "HD9-_IJbD3Wz"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -148,7 +153,7 @@
         "id": "zUREQ-xfE5zB",
         "outputId": "798bc4af-da5e-43aa-9828-b3cd0ea98804"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,7 +185,7 @@
         },
         "outputId": "b26fba0f-b6d3-4db4-9af3-f1335b6e4ade"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +218,7 @@
         },
         "outputId": "adc41ed1-c4ad-4f2b-93b5-d03994b0ca0f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +259,7 @@
         "id": "SOxAp9UAUPxL",
         "outputId": "6c837a00-3420-425d-bea0-7770f42a6c5b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -975,7 +980,7 @@
         },
         "outputId": "6d060766-7cc9-41b2-a822-0d237bf2cb36"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1074,7 +1079,7 @@
       "metadata": {
         "id": "93ErLMPdLXKh"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1089,53 +1094,38 @@
     {
       "cell_type": "code",
       "source": [
-        "# Función para generar recomendaciones\n",
-        "def recomendar_peliculas_formateadas(user_id, matrix, movies, num_recommendations=5):\n",
-        "    \"\"\"\n",
-        "    Recomienda películas mostrando el movieId como índice y el título desde el dataset real.\n",
-        "    \"\"\"\n",
-        "    # Calcular la matriz de similitud de Pearson\n",
+        "def generar_predicciones(user_id, matrix, num_recommendations=5):\n",
+        "    # Calcular similitud\n",
         "    similarity_matrix = calcular_similitud_pearson(matrix)\n",
         "\n",
-        "    # Identificar los vecinos más cercanos\n",
-        "    user_index = user_id - 1  # Ajustar índice (IDs comienzan desde 1)\n",
+        "    # Buscar vecinos más cercanos\n",
+        "    user_index = user_id - 1\n",
         "    user_similarities = similarity_matrix[user_index]\n",
-        "    neighbors = np.argsort(-user_similarities)[1:21]  # Ignorar el propio usuario, es decir el número de vecinos es e 10, se puede cambiar\n",
+        "    neighbors = np.argsort(-user_similarities)[1:20]  # Usar 20 vecinos\n",
         "\n",
-        "    # Calcular puntajes ponderados para películas no vistas\n",
-        "    user_ratings = matrix[user_index].toarray().flatten()\n",
-        "    peliculas_no_vistas = np.where(user_ratings == 0)[0]\n",
+        "    # Generar predicciones para todas las películas\n",
+        "    predicciones = np.zeros(matrix.shape[1])  # Arreglo para calificaciones predichas\n",
+        "    user_ratings = matrix[user_index].toarray().flatten()  # Calificaciones reales del usuario\n",
         "\n",
-        "    recomendacion_scores = {}\n",
-        "    for pelicula in peliculas_no_vistas:\n",
+        "    for pelicula in range(matrix.shape[1]):  # Iterar por cada película\n",
         "        score, suma_similitud = 0, 0\n",
         "        for vecino in neighbors:\n",
         "            vecino_similitud = user_similarities[vecino]\n",
         "            vecino_rating = matrix[vecino, pelicula]\n",
-        "            if vecino_rating > 0:\n",
+        "            if vecino_rating > 0:  # Considerar solo vecinos que hayan calificado la película\n",
         "                score += vecino_similitud * vecino_rating\n",
         "                suma_similitud += vecino_similitud\n",
         "\n",
+        "        # Si algún vecino calificó esta película, calcular predicción\n",
         "        if suma_similitud > 0:\n",
-        "            recomendacion_scores[pelicula] = score / suma_similitud\n",
+        "            predicciones[pelicula] = score / suma_similitud\n",
         "\n",
-        "    # Ordenar las películas por puntaje\n",
-        "  #Prioriza las películas con los puntajes más altos para recomendar las mejores opciones\n",
-        "    peliculas_recomendadas = sorted(recomendacion_scores.items(), key=lambda x: x[1], reverse=True)\n",
-        "    recomendaciones_ids = [movie_id for movie_id, _ in peliculas_recomendadas[:num_recommendations]]\n",
-        "\n",
-        "    # Filtrar películas desde el dataset real y mantener el formato deseado\n",
-        "    recomendaciones = movies.set_index('movieId').loc[recomendaciones_ids][['title']]\n",
-        "    recomendaciones.index.name = 'movieId'\n",
-        "    return recomendaciones\n",
-        "\n",
-        "    # Simular una matriz de usuario-película (usuarios: 80, películas: 80)\n",
-        "user_movie_matrix = csr_matrix(np.random.randint(0, 6, size=(607, len(peliculas.head(20)))))"
+        "    return predicciones"
       ],
       "metadata": {
         "id": "PfViz6VJWbtK"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1165,7 +1155,7 @@
         "id": "CzM-3RXVrGf3",
         "outputId": "09eb1e65-6f39-47b6-c556-0bb51d49c0fc"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1268,7 +1258,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
