Se creó con Colab

--- a/practica2_sis_recomendacion2.ipynb
+++ b/practica2_sis_recomendacion2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOCr4Hb6ovShAYbKv54Ug3l",
+      "authorship_tag": "ABX9TyOBxDxJ9Qm+NTup3B+jndDq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1208,48 +1208,16 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.metrics import precision_score, recall_score\n",
+        "def calcular_rmse(predicciones, calificaciones_reales):\n",
+        "    # Filtrar calificaciones no nulas (películas que el usuario calificó)\n",
+        "    indices = calificaciones_reales.nonzero()\n",
+        "    reales = calificaciones_reales[indices]\n",
+        "    predichas = predicciones[indices]\n",
         "\n",
-        "def calcular_precision_recall(recomendaciones, calificaciones, umbral=4.0):\n",
-        "    \"\"\"\n",
-        "    Calcula precisión y recall para las recomendaciones dadas.\n",
-        "\n",
-        "    recomendaciones: Lista de IDs de películas recomendadas.\n",
-        "    calificaciones: DataFrame con las calificaciones del usuario (contiene columnas 'movieId' y 'rating').\n",
-        "    umbral: Umbral para considerar una película como relevante (default: >= 4.0).\n",
-        "    \"\"\"\n",
-        "    # Películas relevantes para el usuario\n",
-        "    relevantes = set(calificaciones[calificaciones['rating'] >= umbral]['movieId'])\n",
-        "    print(\"Películas relevantes:\", relevantes)\n",
-        "\n",
-        "    # Películas recomendadas\n",
-        "    recomendadas = set(recomendaciones)\n",
-        "    print(\"Recomendaciones:\", recomendadas)\n",
-        "\n",
-        "    # Calcular intersección\n",
-        "    relevantes_recomendadas = recomendadas.intersection(relevantes)\n",
-        "    print(\"Películas relevantes recomendadas:\", relevantes_recomendadas)\n",
-        "\n",
-        "    # Precisión\n",
-        "    precision = len(relevantes_recomendadas) / len(recomendadas) if recomendadas else 0\n",
-        "\n",
-        "    # Recall\n",
-        "    recall = len(relevantes_recomendadas) / len(relevantes) if relevantes else 0\n",
-        "\n",
-        "    return precision, recall\n",
-        "\n",
-        "\n",
-        "# Crear una copia explícita del DataFrame de calificaciones del usuario\n",
-        "calificaciones_usuario = calificaciones[calificaciones['userId'] == user_id].copy()\n",
-        "\n",
-        "# Asegurar el formato correcto de los IDs\n",
-        "recomendaciones_sistema = [int(movie) for movie in recomendaciones_formateadas.index.tolist()]\n",
-        "calificaciones_usuario['movieId'] = calificaciones_usuario['movieId'].astype(int)\n",
-        "\n",
-        "# Calcular precisión y recall\n",
-        "precision, recall = calcular_precision_recall(recomendaciones_sistema, calificaciones_usuario)\n",
-        "print(f\"Precisión: {precision:.2f}\")\n",
-        "print(f\"Recall: {recall:.2f}\")"
+        "    # Calcular RMSE\n",
+        "    mse = mean_squared_error(reales, predichas)\n",
+        "    rmse = sqrt(mse)\n",
+        "    return rmse"
       ],
       "metadata": {
         "id": "g2G6j-xMQLL7",
@@ -1282,7 +1250,18 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Generar predicciones para el usuario\n",
+        "user_id = 1\n",
+        "predicciones_usuario = generar_predicciones(user_id, user_movie_matrix)\n",
+        "\n",
+        "# Extraer calificaciones reales del usuario\n",
+        "calificaciones_reales_usuario = user_movie_matrix[user_id - 1].toarray().flatten()\n",
+        "\n",
+        "# Calcular RMSE\n",
+        "rmse = calcular_rmse(predicciones_usuario, calificaciones_reales_usuario)\n",
+        "print(f\"RMSE para el usuario {user_id}: {rmse:.2f}\")"
+      ],
       "metadata": {
         "id": "aGTDVMINn4xP"
       },
