Se creó con Colab

--- a/practica2_sis_recomendacion2.ipynb
+++ b/practica2_sis_recomendacion2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOjEev8oUDftlu3klEKQkfa",
+      "authorship_tag": "ABX9TyMcyLt9Njn39GWByi7vLD4S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1072,11 +1072,11 @@
         "print(\"Usuario solicitado:\", user_id)"
       ],
       "metadata": {
-        "id": "mCObKDmvsJHI",
-        "outputId": "655dcf88-c1ae-4719-fc34-45a457f3f431",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mCObKDmvsJHI",
+        "outputId": "655dcf88-c1ae-4719-fc34-45a457f3f431"
       },
       "execution_count": 202,
       "outputs": [
@@ -1102,11 +1102,11 @@
         "print(\"Usuario solicitado:\", user_id)"
       ],
       "metadata": {
-        "id": "Vy1tJ7NGsejp",
-        "outputId": "81e4ca86-6b95-43aa-e778-7f5fa247ef09",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Vy1tJ7NGsejp",
+        "outputId": "81e4ca86-6b95-43aa-e778-7f5fa247ef09"
       },
       "execution_count": 203,
       "outputs": [
@@ -1138,11 +1138,12 @@
       "source": [
         "# Función para generar predicciones\n",
         "def generar_predicciones(user_id, matrix):\n",
-        "    \"\"\"\n",
-        "    Genera predicciones de calificaciones para todas las películas del usuario.\n",
-        "    \"\"\"\n",
-        "    # Calcular la matriz de similitud de Pearson\n",
+        "    #Genera predicciones de calificaciones para todas las películas del usuario.\n",
+        "\n",
+        "    #Calcular la matriz de similitud de Pearson\n",
         "    similarity_matrix = calcular_similitud_pearson(matrix)\n",
+        "\n",
+        "\n",
         "\n",
         "    # Identificar los vecinos más cercanos\n",
         "    user_index = user_id - 1  # Ajustar índice (IDs comienzan desde 1)\n",
@@ -1173,7 +1174,7 @@
       "metadata": {
         "id": "PfViz6VJWbtK"
       },
-      "execution_count": 204,
+      "execution_count": 215,
       "outputs": []
     },
     {
@@ -1206,7 +1207,7 @@
       "metadata": {
         "id": "VQ5ECvCLgYKQ"
       },
-      "execution_count": 205,
+      "execution_count": 212,
       "outputs": []
     },
     {
@@ -1259,9 +1260,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "893c507f-96c9-4077-d617-9b351fb58220"
+        "outputId": "fa0e3d5b-3cff-43f7-ec7b-58688554d7ea"
       },
-      "execution_count": 206,
+      "execution_count": 213,
       "outputs": [
         {
           "output_type": "stream",
@@ -1304,13 +1305,13 @@
         "print(f\"RMSE promedio: {rmse_promedio:.2f}\")"
       ],
       "metadata": {
-        "id": "d1960t-l_4Ln",
-        "outputId": "e8cd8e53-c1ff-4735-a526-4b689db7a59e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "d1960t-l_4Ln",
+        "outputId": "890eea89-4918-401e-92b3-183afc82b11b"
       },
-      "execution_count": 207,
+      "execution_count": 214,
       "outputs": [
         {
           "output_type": "stream",
