--- a/practica2_sis_recomendacion2.ipynb
+++ b/practica2_sis_recomendacion2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMcyLt9Njn39GWByi7vLD4S",
+      "authorship_tag": "ABX9TyPJGV6Zc8ZgQ4YJXPOpeK7/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1029,13 +1029,22 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        " Este proceso evalúa la similitud de patrones de calificación entre diferentes usuarios"
+      ],
+      "metadata": {
+        "id": "E8C23Hraopvw"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Función para calcular la similitud de Pearson\n",
         "def calcular_similitud_pearson(matrix):\n",
-        "    \"\"\"\n",
-        "    Calcula la matriz de similitud de Pearson para una matriz de usuario-película.\n",
-        "    \"\"\"\n",
+        "\n",
+        "    #Calcula la matriz de similitud de Pearson para una matriz de usuario-película.\n",
+        "\n",
         "    # Convertir a denso si es necesario\n",
         "    matrix_dense = matrix.toarray() if hasattr(matrix, \"toarray\") else matrix\n",
         "\n",
@@ -1065,72 +1074,21 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "print(\"Índices de la matriz usuario-película:\", user_movie_matrix.index)\n",
-        "print(\"Tipo de datos:\", type(user_movie_matrix))\n",
-        "print(\"Usuario solicitado:\", user_id)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mCObKDmvsJHI",
-        "outputId": "655dcf88-c1ae-4719-fc34-45a457f3f431"
-      },
-      "execution_count": 202,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Índices de la matriz usuario-película: Index([  1,   2,   3,   4,   5,   6,   7,   8,   9,  10,\n",
-            "       ...\n",
-            "       601, 602, 603, 604, 605, 606, 607, 608, 609, 610],\n",
-            "      dtype='int64', name='userId', length=610)\n",
-            "Tipo de datos: <class 'pandas.core.frame.DataFrame'>\n",
-            "Usuario solicitado: 5\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"Índices de la matriz usuario-película:\", user_movie_matrix.index)\n",
-        "print(\"Tipo de datos:\", type(user_movie_matrix))\n",
-        "print(\"Usuario solicitado:\", user_id)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Vy1tJ7NGsejp",
-        "outputId": "81e4ca86-6b95-43aa-e778-7f5fa247ef09"
-      },
-      "execution_count": 203,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Índices de la matriz usuario-película: Index([  1,   2,   3,   4,   5,   6,   7,   8,   9,  10,\n",
-            "       ...\n",
-            "       601, 602, 603, 604, 605, 606, 607, 608, 609, 610],\n",
-            "      dtype='int64', name='userId', length=610)\n",
-            "Tipo de datos: <class 'pandas.core.frame.DataFrame'>\n",
-            "Usuario solicitado: 5\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# **6. Función para generar recomendaciones**"
       ],
       "metadata": {
         "id": "IYK3NZ-y2oXz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Sen generan predicciones de calificaciones para todas las películas que un usuario no ha calificado, basándose en las calificaciones de usuarios similares"
+      ],
+      "metadata": {
+        "id": "AOuumGk_qSvg"
       }
     },
     {
@@ -1142,8 +1100,6 @@
         "\n",
         "    #Calcular la matriz de similitud de Pearson\n",
         "    similarity_matrix = calcular_similitud_pearson(matrix)\n",
-        "\n",
-        "\n",
         "\n",
         "    # Identificar los vecinos más cercanos\n",
         "    user_index = user_id - 1  # Ajustar índice (IDs comienzan desde 1)\n",
@@ -1180,10 +1136,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "calcular RMSE"
+        "# **7 calcular RMSE (Root Mean Squared Error, o Error Cuadrático Medio de Raíz)**"
       ],
       "metadata": {
         "id": "FAuHGtKigXgA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Entre las calificaciones predichas y las calificaciones reales."
+      ],
+      "metadata": {
+        "id": "4wzAEHW4rTyY"
       }
     },
     {
@@ -1191,10 +1156,7 @@
       "source": [
         "# Función para calcular el RMSE\n",
         "def calcular_rmse(predicciones, calificaciones_reales):\n",
-        "    \"\"\"\n",
-        "    Calcula el RMSE entre las calificaciones predichas y reales.\n",
-        "    \"\"\"\n",
-        "    # Filtrar solo las películas calificadas por el usuario\n",
+        "     # Filtrar solo las películas calificadas por el usuario\n",
         "    indices = calificaciones_reales.nonzero()  # Índices de valores no nulos\n",
         "    reales = calificaciones_reales[indices]\n",
         "    predichas = predicciones[indices]\n",
@@ -1207,7 +1169,7 @@
       "metadata": {
         "id": "VQ5ECvCLgYKQ"
       },
-      "execution_count": 212,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1230,7 +1192,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Se generan predicciones de calificaciones para un usuario y se evalua la presición con la métrica RMSE"
+      ],
       "metadata": {
         "id": "hf3JWlaHQIWL"
       }
@@ -1238,9 +1202,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Flujo principal ---\n",
         "\n",
-        "# Supongamos que ya tienes el DataFrame user_movie_matrix\n",
         "# Convertir DataFrame a matriz dispersa\n",
         "user_movie_sparse_matrix = csr_matrix(user_movie_matrix.values)\n",
         "\n",
@@ -1283,15 +1245,26 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "# 9. **Sistema de recomendación para un grupo de usuarios**"
+      ],
       "metadata": {
         "id": "VqN6qFhC_3zh"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Se evalúa el sistema de recomendación para un grupo de usuarios y se calcula el RMSE individual para cada usuario y luego se obtiene el promedio del RMSE para este conjunto de usuarios"
+      ],
+      "metadata": {
+        "id": "2z05gCGNv0y4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "usuarios = range(1, 6)  # Evaluar los primeros 10 usuarios\n",
+        "usuarios = range(1, 6)  # Evaluar los primeros 5 usuarios\n",
         "rmse_total = 0\n",
         "\n",
         "for user_id in usuarios:\n",
@@ -1387,9 +1360,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "dasd"
-      ],
+      "source": [],
       "metadata": {
         "id": "hDHUFW0lQKSq"
       }
